--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "vue": "^2.5.13",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^0.17.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-typescript": "^3.0.0-alpha.11",
