--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^2.5.13",
     "vue-class-component": "^6.0.0",
+    "vue-fullpage.js": "0.0.1",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.7"
@@ -19,7 +20,8 @@
     "@vue/cli-service": "^3.0.0-alpha.11",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "vue-typed": "^2.1.3"
   },
   "browserslist": [
     "> 1%",
