--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "dependencies": {
     "vue": "^2.5.13",
-    "vue-class-component": "^6.0.0",
+    "vue-class-component": "^6.2.0",
     "vue-fullpage.js": "0.0.1",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.17.7"
+    "vuetify": "^1.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-typescript": "^3.0.0-alpha.11",
-    "@vue/cli-service": "^3.0.0-alpha.11",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.1",
+    "@vue/cli-service": "^3.0.0-beta.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13",
